--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
       </div>
       <div class="row">
         <div class="contact-form">
-          <form name="contact" method="POST"  onsubmit="submit" action="/success/" netlify>
+          <form name="contact" method="POST"  onsubmit="submit"  netlify>
             <div class="row">
               <div class="w-50">
                 <div class="input-group outer-shadow hover-in-shadow">
