--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             with innovative techniques, and integrating cutting-edge technology to craft designs that resonate
             powerfully. Collaboration fuels my creativity, as I believe in the magic of collective ideas shaping
             exceptional outcomes.</p>
-          <a href="my-cv.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
+          <a href="Ayush Kr Agarwal Resume Updated.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
           <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
         </div>
       </div>
